--- a/ProyectoFinal/Views/CRUD/GuardarForm.cshtml
+++ b/ProyectoFinal/Views/CRUD/GuardarForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model Usuarios
+﻿@model Empleados
 @{
     ViewData["Title"] = "GuardarForm";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,27 +6,52 @@
 
 <div class="card">
     <div class="card-header">
-        Crear usuario
+        Empleados
     </div>
     <div class="card-body">
-        <form>
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
-                <input asp-for="CORREO" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <span asp-validation-for="CORREO" class="text-danger"></span>
-                <div id="emailHelp" class="form-text">Nunca compartiremos tu correo con nadie.</div>
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                <input asp-for="CONTRASEÑA" class="form-control" id="exampleInputPassword1">
-                <span asp-validation-for="CONTRASEÑA" class="text-danger"></span>
-            </div>            
-            <button type="submit" class="btn btn-primary">Guardar</button>
-            <a asp-action="Listar" asp-controller="CRUD" class="btn btn-warning">Ver lista</a>
-        </form>       
+     <form>
+        <div class="mb-3">
+        <label class="form-label">Empleado_codigo</label>
+        <input asp-for="EMPLEADOS_CODIGO" type="number"class="form-control">
+        <span asp-validation-for="EMPLEADOS_CODIGO" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Supervisor_codigo</label>
+            <input asp-for="SUPERVISOR_CODIGO" type="number" class="form-control">
+            <span asp-validation-for="SUPERVISOR_CODIGO" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Tipo Empleado</label>
+            <input asp-for="TIPO_EMPLEADO" type="text" class="form-control">
+            <span asp-validation-for="TIPO_EMPLEADO" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Apellido_supervisor</label>
+            <input asp-for="APELLIDO_SUPERVISOR" type="text" class="form-control">
+            <span asp-validation-for="APELLIDO_SUPERVISOR" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Nombre</label>
+            <input asp-for="NOMBRE" type="text" class="form-control">
+            <span asp-validation-for="NOMBRE" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Apellido</label>
+            <input asp-for="APELLIDO" type="text" class="form-control">
+            <span asp-validation-for="APELLIDO" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Usuarios_codigo</label>
+            <input asp-for="USUARIOS_CODIGO" type="number" class="form-control">
+            <span asp-validation-for="USUARIOS_CODIGO" class="text-danger"></span>
+        </div>
+
+
+  
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <a asp-action="Listar" asp-controller="CRUD" class="btn btn-warning">Volver al listado</a>
+    </form>
+        
     </div>
 </div>
-
-
-
 
