--- a/ProyectoFinal/Views/Empleados/Listar.cshtml
+++ b/ProyectoFinal/Views/Empleados/Listar.cshtml
@@ -30,6 +30,7 @@
                         <td>@item.APELLIDO</td>
                         <td>
                             <a asp-action="Editar" asp-controller="Empleados" class="btn-primary btn-sm" asp-route-id="@item.EMPLEADOS_CODIGO">Editar</a>
+                            <a asp-action="Eliminar" asp-controller="Empleados" class="btn-primary btn-sm" asp-route-id="@item.EMPLEADOS_CODIGO">Eliminar</a>
                         </td>
                     </tr>
                 }
