CRUD productos, empleados y usuarios

--- a/ProyectoFinal/Views/Empleados/GuardarForm.cshtml
+++ b/ProyectoFinal/Views/Empleados/GuardarForm.cshtml
@@ -26,7 +26,7 @@
                 <input asp-for="APELLIDO" type="text" class="form-control">
                 <span asp-validation-for="APELLIDO" class="text-danger"></span>
             </div>           
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Guardar</button>
             <a asp-action="Listar" asp-controller="Empleados" class="btn btn-warning">Volver al listado</a>
         </form>
     </div>
