--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -48,6 +48,10 @@
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Empleados" asp-action="Listar">Empleados</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Listar">Usuarios</a>
+                                        </li>
+                                        
                                     </ul>
                                 </li>
                             </ul>
