--- a/ProyectoFinal/Views/Clientes/Editar.cshtml
+++ b/ProyectoFinal/Views/Clientes/Editar.cshtml
@@ -27,8 +27,8 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Contraseña</label>
-                <input asp-for="CONTRASEÑA" type="text" class="form-control">
-                <span asp-validation-for="CONTRASEÑA" class="text-danger"></span>
+                <input asp-for="CONTRASENIA" type="text" class="form-control">
+                <span asp-validation-for="CONTRASENIA" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label class="form-label">TIpo de cliente</label>
