--- a/ProyectoFinal/Views/Clientes/Listar.cshtml
+++ b/ProyectoFinal/Views/Clientes/Listar.cshtml
@@ -32,7 +32,7 @@
                         <td>@item.NOMBRE</td>
                         <td>@item.APELLIDO</td>
                         <td>@item.CORREO</td>
-                        <td>@item.CONTRASEÑA</td>
+                        <td>@item.CONTRASENIA</td>
                         <td>@item.TIPO_CLIENTE</td>
                         <td>@item.CUIT_DNI</td>
                         <td>@item.RAZON_SOCIAL</td>
