Vistas y CRUD: Productos, Empleados y Clientes

--- a/ProyectoFinal/Views/Clientes/Editar.cshtml
+++ b/ProyectoFinal/Views/Clientes/Editar.cshtml
@@ -13,37 +13,37 @@
             <div class="mb-3">
                 <label class="form-label">Nombre</label>
                 <input asp-for="NOMBRE" type="text" class="form-control">
-                <span asp-validation-for="NOMBRE" class="text-danger"></span>
+                
             </div>
             <div class="mb-3">
                 <label class="form-label">Apellido</label>
                 <input asp-for="APELLIDO" type="text" class="form-control">
-                <span asp-validation-for="APELLIDO" class="text-danger"></span>
+               
             </div>
             <div class="mb-3">
                 <label class="form-label">Correo</label>
                 <input asp-for="CORREO" type="text" class="form-control">
-                <span asp-validation-for="CORREO" class="text-danger"></span>
+                
             </div>
             <div class="mb-3">
                 <label class="form-label">Contraseña</label>
                 <input asp-for="CONTRASENIA" type="text" class="form-control">
-                <span asp-validation-for="CONTRASENIA" class="text-danger"></span>
+                
             </div>
             <div class="mb-3">
-                <label class="form-label">TIpo de cliente</label>
+                <label class="form-label">Tipo de cliente</label>
                 <input asp-for="TIPO_CLIENTE" type="text" class="form-control">
-                <span asp-validation-for="TIPO_CLIENTE" class="text-danger"></span>
+                
             </div>
             <div class="mb-3">
                 <label class="form-label">CUIT/DNI</label>
                 <input asp-for="CUIT_DNI" type="text" class="form-control">
-                <span asp-validation-for="CUIT_DNI" class="text-danger"></span>
+                
             </div>
             <div class="mb-3">
                 <label class="form-label">Razon social</label>
                 <input asp-for="RAZON_SOCIAL" type="text" class="form-control">
-                <span asp-validation-for="RAZON_SOCIAL" class="text-danger"></span>
+                
             </div>
             <button type="submit" class="btn btn-primary">Guardar</button>
             <a asp-action="Listar" asp-controller="Clientes" class="btn btn-warning">Volver al listado</a>
