--- a/ProyectoFinal/Views/Clientes/GuardarForm.cshtml
+++ b/ProyectoFinal/Views/Clientes/GuardarForm.cshtml
@@ -32,7 +32,7 @@
                 <span asp-validation-for="CONTRASENIA" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label class="form-label">TIpo de cliente</label>
+                <label class="form-label">Tipo de cliente</label>
                 <input asp-for="TIPO_CLIENTE" type="text" class="form-control">
                 <span asp-validation-for="TIPO_CLIENTE" class="text-danger"></span>
             </div>
