--- a/ProyectoFinal/Views/Productos/Editar.cshtml
+++ b/ProyectoFinal/Views/Productos/Editar.cshtml
@@ -12,13 +12,6 @@
 
         <form asp-action="Editar" asp-controller="Productos"method="post">
         <input asp-for="PRODUCTOS_COD" type="hidden" class="form-control"/>
-
-            <div class="mb-3">
-                <label class="form-label">Codigo</label>
-                <input asp-for="PRODUCTOS_COD" type="number" class="form-control">
-                
-            </div>
-
             <div class="mb-3">
                 <label class="form-label">Nombre</label>
                 <input asp-for="NOMBRE" type="text" class="form-control">
@@ -38,7 +31,7 @@
                 <label class="form-label">Codigo de proovedor</label>
                 <input asp-for="PROVEEDORES_COD" type="number" class="form-control">
             </div>
-            <button asp-action="GuardarForm" asp-controller="Productos" type="submit" class="btn btn-primary">Guardar</button>
+            <button asp-action="Editar" asp-controller="Productos" type="submit" class="btn btn-primary">Guardar</button>
             <a asp-action="Listar" asp-controller="Productos" class="btn btn-warning">Volver al listado</a>
         </form>
     </div>
