queda pendiente arreglar editar clientes

--- a/ProyectoFinal/Views/Clientes/Editar.cshtml
+++ b/ProyectoFinal/Views/Clientes/Editar.cshtml
@@ -8,8 +8,9 @@
         Editar clientes
     </div>
     <div class="card-body">
-        <form asp-action="Editar" asp-controller="Empleados" method="post">
-            <input asp-for="CLIENTES_COD" type="hidden" class="form-control" />
+        <form asp-action="Editar" asp-controller="Clientes" method="post">
+            <input asp-for="CLIENTES_COD" type="text" class="form-control" />
+            <input asp-for="USUARIOS_CODIGO" type="text" class="form-control" />
             <div class="mb-3">
                 <label class="form-label">Nombre</label>
                 <input asp-for="NOMBRE" type="text" class="form-control">
@@ -45,7 +46,7 @@
                 <input asp-for="RAZON_SOCIAL" type="text" class="form-control">
                 
             </div>
-            <button type="submit" class="btn btn-primary">Guardar</button>
+            <button asp-action="Editar" asp-controller="Clientes" type="submit" class="btn btn-primary">Guardar</button>
             <a asp-action="Listar" asp-controller="Clientes" class="btn btn-warning">Volver al listado</a>
         </form>
     </div>
