--- a/ProyectoFinal/Views/Empleados/Editar.cshtml
+++ b/ProyectoFinal/Views/Empleados/Editar.cshtml
@@ -12,13 +12,14 @@
 
         <form asp-action="Editar" asp-controller="Empleados"method="post">
         <input asp-for="EMPLEADOS_CODIGO" type="hidden" class="form-control"/>
+        <input asp-for="APELLIDO_SUPERVISOR" type="hidden" class="form-control">
+        <input asp-for="USUARIOS_CODIGO" type="hidden" class="form-control">
 
             <div class="mb-3">
                 <label class="form-label">Tipo Empleado</label>
                 <input asp-for="TIPO_EMPLEADO" type="text" class="form-control">
                 
             </div>
-
             <div class="mb-3">
                 <label class="form-label">Nombre</label>
                 <input asp-for="NOMBRE" type="text" class="form-control">
@@ -26,10 +27,9 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Apellido</label>
-                <input asp-for="APELLIDO" type="text" class="form-control">
-                
+                <input asp-for="APELLIDO" type="text" class="form-control">  
             </div>           
-            <button type="submit" class="btn btn-primary">Guardar</button>
+            <button asp-action="Editar"asp-controller="Empleados" type="submit" class="btn btn-primary">Guardar</button>
             <a asp-action="Listar" asp-controller="Empleados" class="btn btn-warning">Volver al listado</a>
         </form>
     </div>
