--- a/ProyectoFinal/Views/Clientes/Listar.cshtml
+++ b/ProyectoFinal/Views/Clientes/Listar.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "Listar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@section Estilos{
+    <link href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet" />
+}
 
 
 <div class="card">
@@ -12,7 +15,7 @@
     <div class="card-body">
         <a asp-action="GuardarForm" asp-controller="Clientes" class="btn btn-success">Crear nuevo</a>
         <hr />
-        <table class="d-lg-table table-bordered">
+        <table id="tb_clientes" class="display" style="width:100%">
             <thead>
                 <tr>
 
@@ -24,6 +27,7 @@
                     <th>Tipo cliente</th>
                     <th>CUIT/DNI</th>
                     <th>Razon social</th>
+                    <th>Funciones</th>
                 </tr>
             </thead>
             <tbody>
@@ -48,3 +52,12 @@
         </table>
     </div>
 </div>
+
+@section Scripts{
+         <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+         <script>
+             $(document).ready(function () {
+                 $('#tb_clientes').DataTable();
+             });
+         </script>
+}
