--- a/ProyectoFinal/Views/Empleados/GuardarForm.cshtml
+++ b/ProyectoFinal/Views/Empleados/GuardarForm.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Empleados
+<!--Definen el tipo de modelo-->
 @{
     ViewData["Title"] = "GuardarForm";
     Layout = "~/Views/Shared/_Layout.cshtml";
