--- a/ProyectoFinal/Views/Proveedores/Listar.cshtml
+++ b/ProyectoFinal/Views/Proveedores/Listar.cshtml
@@ -25,6 +25,7 @@
                         <th>Nombre</th>
                         <th>Apellido</th>
                         <th>Cuit</th>
+                        <th>Funciones</th>
 
                     </tr>
                 </thead>
