--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -61,7 +61,12 @@
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Ordenes" asp-action="Listar">Ordenes</a>
                                         </li>
-                                        
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Perfiles" asp-action="Listar">Perfiles</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Listar">Usuarios</a>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
