--- a/ProyectoFinal/Views/Empleados/Listar.cshtml
+++ b/ProyectoFinal/Views/Empleados/Listar.cshtml
@@ -14,7 +14,7 @@
 
 <div class="card">
     <div class="card-header">
-        Lista de empleados
+        Lista de Empleados
     </div>
     <div class="card-body">
         <!--Presten atencion siempre al asp-controler, el asp action va a ser para todos lo mismo-->
