--- a/ProyectoFinal/Views/Productos/Listar.cshtml
+++ b/ProyectoFinal/Views/Productos/Listar.cshtml
@@ -10,7 +10,7 @@
 
 <div class="card">
     <div class="card-header">
-        Lista de productos
+        Lista de Productos
     </div>
     <div class="card-body">
         <a asp-action="GuardarForm" asp-controller="Productos" class="btn btn-success">Crear nuevo</a>
