--- a/ProyectoFinal/Views/Proveedores/Listar.cshtml
+++ b/ProyectoFinal/Views/Proveedores/Listar.cshtml
@@ -12,7 +12,7 @@
 
     <div class="card">
         <div class="card-header">
-            Lista de proveedores
+            Lista de Proveedores
         </div>
         <div class="card-body">
             <a asp-action="GuardarForm" asp-controller="Proveedores" class="btn btn-success">Crear nuevo</a>
